<resources>
    <string name="app_name">G-shop</string>
    <string name="login">Log in</string>
    <string name="registration">Registration</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="continue_register">Continue</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="city">City</string>
    <string name="phone_number">Phone Number</string>
    <string name="register">Register</string>
    <string name="title_template">Gibson Les Paul</string>
    <string name="price_template">1000 $</string>
    <string name="create_advert">Create Advert</string>
    <string name="headline">Headline</string>
    <string name="add_photos">Add Photos</string>
    <string name="description">Description</string>
    <string name="create">Create</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="price">Price</string>
    <string name="template_description">The Gibson Les Paul is a solid body electric guitar that was first sold by the Gibson Guitar Corporation in 1952. The Les Paul was designed by Gibson president Ted McCarty, factory manager John Huis and their team with input from and endorsement by guitarist Les Paul. Its typical design features a solid maho</string>

    <string name="invalid_email">Invalid email</string>
    <string name="invalid_password">Invalid password</string>
    <string name="invalid_email_or_password">Invalid email or password</string>
    <string name="set_price">Please set price</string>
    <string name="set_description">Please write description</string>
    <string name="set_headline">Write a headline</string>
    <string name="empty_email">Email field is empty</string>
    <string name="empty_password">Password field is empty</string>
    <string name="password_is_weak">Password should be at least 6 characters</string>
    <string name="complete_fields">"Please, complete all fields"</string>
    <string name="complete_this_field">Complete this field</string>
    <string name="your_advert">Your Advert</string>
    <string name="template_title">Gibson Les Paul</string>
    <string name="profile_editing">Profile Editing</string>
    <string name="your_adverts">Your Adverts</string>
    <string name="about_yourself">About Yourself</string>
    <string name="save">Save</string>

    <string name="firebase_auth_invalid_user_exception">"User does not exist or has been deleted"</string>
    <string name="firebase_auth_invalid_credentials_exception">"Неправильний пароль або користувач не має пароля "</string>
    <string name="user_exists_error_msg">"Користувач з таким номером вже існує "</string>
    <string name="slow_internet">"Не стабільне з'єднання "</string>
    <string name="no_internet_connection">"Немає з'єднання "</string>
    <string name="no_internet_or_slow">The connection is unstable or absent</string>
    <string name="internet_connection_error">"Немає з'єднання "</string>
    <string name="log_out">Log out</string>
    <string name="no_adverts">No Adverts</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="http429_msg">Server problems. Please try again later</string>

    <string name="complete_name_field">Complete name field</string>
    <string name="complete_surname_field">Complete surname field</string>
    <string name="complete_descirption_field">Complete description field</string>
    <string name="complete_city_field">Complete city field</string>
    <string name="complete_phone_number_field">Complete phone number field</string>
    <string name="advert">Advert</string>
    <string name="show_contact">Show Contact</string>
    <string name="delete_account">Delete Account</string>
    <string name="delete_user_description">You are about to delete your account, which provides access to the show of your ads. You will no longer be able to use them, and all data in your account will be lost.</string>
    <string name="edit_advert">Advert Editing</string>
    <string name="call">Call</string>
    <string name="delete_photo">Delete Photo</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="delete_image">Delete Image ?</string>
    <string name="wait_for_uploading">Wait for uploading</string>
    <string name="photo_limit">"Photo limit "</string>
    <string name="add_one_photo">Please Add one photo</string>
    <string name="download_photo">Please wait, uploading photos ...</string>
    <string name="choose_picture">Choose the picture</string>
    <string name="user_description">About Yourself:</string>
</resources>