<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".views.adverts.about_user_advert.AboutUserAdvertFragment">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:elevation="0dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/green"
                app:titleTextColor="@color/white"
                app:navigationIcon="@drawable/ic_arrow_back"
                app:title="@string/advert" />
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar_layout">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/poster"
                    android:layout_width="match_parent"
                    android:layout_height="365dp"
                    tools:src="@drawable/ic_no_photo"
                    android:scaleType="centerCrop"
                    app:layout_constraintTop_toTopOf="@id/layout"
                    app:layout_constraintStart_toStartOf="@id/layout"
                    app:layout_constraintEnd_toEndOf="@id/layout"/>

                <ImageView
                    android:id="@+id/no_image"
                    android:layout_width="match_parent"
                    android:layout_height="365dp"
                    android:contentDescription="@null"
                    android:visibility="gone"
                    app:layout_constraintTop_toTopOf="@id/layout"
                    app:layout_constraintStart_toStartOf="@id/layout"
                    app:layout_constraintEnd_toEndOf="@id/layout"/>

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxWidth="173dp"
                    android:maxHeight="28dp"
                    android:textSize="24sp"
                    android:textColor="@color/text_color"
                    android:text="@string/template_title"
                    android:layout_marginTop="8dp"
                    app:layout_constraintHorizontal_bias="0.04"
                    app:layout_constraintTop_toBottomOf="@id/poster"
                    app:layout_constraintStart_toStartOf="@id/layout"
                    app:layout_constraintEnd_toEndOf="@id/layout"
                    app:layout_constraintBottom_toTopOf="@id/description"/>

                <TextView
                    android:id="@+id/price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_corner_text"
                    android:text="@string/price_template"
                    android:textColor="@color/white"
                    android:layout_marginTop="16dp"
                    app:layout_constraintHorizontal_bias="0.05"
                    app:layout_constraintBottom_toTopOf="@id/description"
                    app:layout_constraintEnd_toEndOf="@id/layout"
                    app:layout_constraintStart_toEndOf="@+id/title"
                    app:layout_constraintTop_toBottomOf="@id/poster" />

                <TextView
                    android:id="@+id/description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxWidth="391dp"
                    android:text="@string/template_description"
                    android:textColor="@color/text_color"
                    app:layout_constraintEnd_toEndOf="@id/layout"
                    app:layout_constraintHorizontal_bias="0.048"
                    app:layout_constraintStart_toStartOf="@id/layout"
                    app:layout_constraintTop_toBottomOf="@id/title" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/show_contact"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/show_contact"
                    android:textAllCaps="false"
                    android:letterSpacing="0"
                    android:fontFamily="@font/roboto_light"
                    android:layout_marginTop="24dp"
                    android:paddingHorizontal="26dp"
                    app:layout_constraintTop_toBottomOf="@id/description"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>