<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".views.adverts.create_advert.CreateAdvertFragment">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:elevation="0dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/green"
                app:navigationIcon="@drawable/ic_arrow_back"
                app:title="@string/create_advert"
                app:titleTextColor="@color/white" />
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar_layout">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/headline_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="@android:color/transparent"
                    android:hint="@string/headline"
                    app:counterEnabled="true"
                    app:counterMaxLength="100"
                    android:layout_marginTop="16dp"
                    app:boxBackgroundColor="@android:color/transparent"
                    app:layout_constraintBottom_toTopOf="@+id/price_layout"
                    app:layout_constraintEnd_toEndOf="@id/layout"
                    app:layout_constraintStart_toStartOf="@id/layout"
                    app:layout_constraintTop_toTopOf="@id/layout"
                    app:layout_constraintVertical_bias="0.5">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/headline"
                        android:layout_width="match_parent"
                        android:maxLength="100"
                        android:layout_height="match_parent"
                        android:inputType="textPersonName" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/price_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="@android:color/transparent"
                    android:hint="@string/price"
                    app:counterEnabled="true"
                    app:counterMaxLength="7"
                    app:boxBackgroundColor="@android:color/transparent"
                    app:layout_constraintEnd_toEndOf="@id/layout"
                    app:layout_constraintStart_toStartOf="@id/layout"
                    app:layout_constraintTop_toBottomOf="@id/add_photos"
                    app:layout_constraintBottom_toTopOf="@id/add_photos">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/price"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:maxLength="7"
                        android:inputType="number" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/add_photos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="22dp"
                    android:text="@string/add_photos"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="@id/layout"
                    app:layout_constraintHorizontal_bias="0.05"
                    app:layout_constraintStart_toStartOf="@id/layout"
                    app:layout_constraintTop_toBottomOf="@id/price_layout"
                    app:layout_constraintBottom_toTopOf="@id/imageLayout"/>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/imageLayout"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/add_photos">


                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/selectImage"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                        app:layout_constraintBottom_toBottomOf="@id/imageLayout"
                        app:layout_constraintTop_toTopOf="@id/imageLayout"
                        app:spanCount="7"
                        tools:itemCount="6"/>


                </androidx.constraintlayout.widget.ConstraintLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/description_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="14dp"
                    android:layout_marginEnd="14dp"
                    android:hint="@string/description"
                    app:counterEnabled="true"
                    app:counterMaxLength="1000"
                    android:layout_marginTop="12dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/imageLayout"
                    app:layout_constraintBottom_toTopOf="@id/create_advert">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:inputType="textCapSentences|textMultiLine"
                        android:maxLength="1000"
                        android:lines="@null"
                        android:scrollHorizontally="false"
                        android:verticalScrollbarPosition="defaultPosition"
                        android:overScrollMode="always"
                        android:scrollbarStyle="insideInset"
                        android:scrollbars="vertical"
                        android:singleLine="false" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/create_advert"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/create"
                    android:fontFamily="@font/roboto_light"
                    android:letterSpacing="0"
                    android:textAllCaps="false"
                    android:paddingHorizontal="48dp"
                    android:layout_marginTop="86dp"
                    app:layout_constraintBottom_toBottomOf="@id/layout"
                    app:layout_constraintEnd_toEndOf="@id/layout"
                    app:layout_constraintStart_toStartOf="@id/layout"
                    app:layout_constraintTop_toBottomOf="@id/description_layout"
                    app:layout_constraintVertical_bias="0.25" />



            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>